--- a/index.html
+++ b/index.html
@@ -36,10 +36,6 @@ layout: default
       Join <a href="https://ailab.kaist.ac.kr">AIPR-Lab</a> as a M.S. Student!
     </div>
 
-    <div class="col-12 col-md-12 text-md-left">
-      <b class="bbold" style="color:#fa8072;">Dec 2017</b>&nbsp;&nbsp;&nbsp;&nbsp;
-      Achieve 1st Prize at Worksmart Contest in Samsung Electronics!
-    </div>
   </div>
 </div>
 <p></p>
@@ -56,7 +52,7 @@ layout: default
         </div>
       
         <div class="paper">
-          <p class="title"><b>Soongsil University<b style="float:right;">Mar. 2007 - Feb. 2015</b></b></p>
+          <p class="title"><b>Korea Advanced Institute of Science and Technology (KAIST)<b style="float:right;">Mar. 2017 - Feb. 2022</b></b></p>
           
           <p>B.S. in Computer Science
           <p></p>
